feat: finished chapter 4

--- a/code-lstlistings.sty
+++ b/code-lstlistings.sty
@@ -38,3 +38,10 @@
 	ndkeywords={@Deprecated, @JvmField, @JvmName, @JvmOverloads, @JvmStatic, @JvmSynthetic, Array, Byte, Double, Float, Int, Integer, Iterable, Long, Runnable, Short, String, Unit, it},
 	sensitive=true
 }
+
+\lstdefinelanguage{Yaml}{
+	comment=[l]{####},
+	keywords={subjects, name, code, outcomes, warning},
+	morestring=[b]",
+	sensitive=true
+}
